--- a/dataset_configs/spanish_pc/mls/config.yaml
+++ b/dataset_configs/spanish_pc/mls/config.yaml
@@ -67,7 +67,7 @@ processors:
     rename_fields:
       "text": "original_dataset_text"
 
-  - _target_: dataset_configs.spanish_pc.mls.unique_processors.change_pc_fields.ChangePCFields
+  - _target_: sdp.processors.ChangePCFields
     input_manifest_file: "${workspace_dir}/mls_spanish_processed/${data_split}_manifest_pc_with_pred.json"
     output_manifest_file: "${workspace_dir}/mls_spanish_processed/${data_split}_manifest_pc_with_pred.json"
 
