--- a/dataset_configs/italian/voxpopuli/config.yaml
+++ b/dataset_configs/italian/voxpopuli/config.yaml
@@ -3,6 +3,12 @@ data_split: ???
 workspace_dir: ???
 final_manifest: ${workspace_dir}/${data_split}_manifest.json
 
+run_filtering:
+  train: True
+  # disabling dropping data for dev/test
+  dev: False
+  test: False
+
 processors:
   - _target_: sdp.processors.CreateInitialManifestVoxpopuli
     output_manifest_file: ${workspace_dir}/${data_split}_manifest0.json
@@ -10,6 +16,10 @@ processors:
     raw_data_dir: ${workspace_dir}/raw_data
     resampled_audio_dir: ${workspace_dir}/${data_split}/audio
     data_split: ${data_split}
+
+  - _target_: sdp.processors.DuplicateFields
+    duplicate_fields:
+      "raw_text": "text"
 
   - _target_: sdp.processors.NormalizeFromNonPCTextVoxpopuli
     test_cases:
@@ -26,7 +36,7 @@ processors:
       - {"pattern": '[!\":\(\)“”;]', "repl": ''}
       - {"pattern": "[-/]", "repl": " "}
       # note that we exclude î and ó - according to wikipedia they are very
-      # rarely used in modern italian. So it's safer to drop them, as they
+      # rarely used in modern italian. So it's safer to replace them, as they
       # often represent other languages (e.g., french or spanish, most often
       # in names), rather than actual italian
       - {"pattern": "î", "repl": "i"}
@@ -34,8 +44,8 @@ processors:
       - {"pattern": "Î", "repl": "I"}
       - {"pattern": "Ó", "repl": "O"}
       # Fixing any obvious errors, such as ? followed by .
-      - {"pattern": '\? \.', "repl": "?"}
-      - {"pattern": '\. \?', "repl": "."}
+      - {"pattern": '\?\.', "repl": "?"}
+      - {"pattern": '\.\?', "repl": "."}
     test_cases:
       - {input: {text: "Wow!"}, output: {text: "Wow."}}
 
@@ -45,9 +55,38 @@ processors:
       - {input: {text: "test тест 测试"}, output: null}
       - {input: {text: "test"}, output: {text: "test"}}
 
+  - _target_: sdp.processors.DuplicateFields
+    duplicate_fields:
+      "text": "text_no_pc"
+
+  # --------------------- only runs in training --------------------------
+
+  - _target_: sdp.processors.ASRInference
+    pretrained_model: "stt_it_quartznet15x5"
+    output_manifest_file: "${workspace_dir}/${data_split}_manifest1.json"
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  - _target_: sdp.processors.SubMakeLowercase
+    text_key: "text_no_pc"
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  - _target_: sdp.processors.SubRegex
+    text_key: "text_no_pc"
+    regex_params_list:
+    - {"pattern": '[?.,]', "repl": ""}
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  - _target_: sdp.processors.DropASRError
+    consecutive_words_threshold: 5
+    text_key: "text_no_pc"
+    should_run: ${subfield:${run_filtering},${data_split}}
+
   - _target_: sdp.processors.DropHighLowDuration
     high_duration_threshold: 999
     low_duration_threshold: 1.5
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  # ----------------------------------------------------------------------
 
   - _target_: sdp.processors.ChangeToRelativePath
     base_dir: ${workspace_dir}
