--- a/dataset_configs/italian/mls/config.yaml
+++ b/dataset_configs/italian/mls/config.yaml
@@ -8,6 +8,11 @@ language_id: "it"
 # subject to the Riva license listed on that page
 pc_model_path: ???
 
+run_filtering:
+  train: True
+  # disabling dropping data for dev/test
+  dev: False
+  test: False
 
 processors:
   - _target_: sdp.processors.CreateInitialManifestMLS
@@ -103,9 +108,6 @@ processors:
     - {"pattern": "ó", "repl": "o"}
     - {"pattern": "Î", "repl": "I"}
     - {"pattern": "Ó", "repl": "O"}
-    # Fixing any obvious errors, such as ? followed by .
-    - {"pattern": '\?\.', "repl": "?"}
-    - {"pattern": '\.\?', "repl": "."}
     test_cases:
       - {input: {text: "Wow!"}, output: {text: "Wow."}}
 
@@ -115,16 +117,65 @@ processors:
       - {input: {text: "test тест 测试"}, output: null}
       - {input: {text: "test"}, output: {text: "test"}}
 
+  - _target_: sdp.processors.DropIfRegexMatch
+    regex_patterns: [
+        # transcription errors
+        "1595/5616/1595_5616_000923.wav",
+    ]
+    text_key: audio_filepath
+    test_cases:
+      - {input: {audio_filepath: "/path/1595/5616/1595_5616_000923.wav"}, output: null}
+      - {input: {audio_filepath: "/path/1/1/abc.wav"}, output: {audio_filepath: "/path/1/1/abc.wav"}}
+
+  # --------------------- only runs in training --------------------------
+
   # drop spaced out regex
   - _target_: sdp.processors.DropIfRegexMatch
     regex_patterns:
     - '(\D ){5,20}'
-
+    should_run: ${subfield:${run_filtering},${data_split}}
     test_cases:
       - {input: {text: "some s p a c e d out letters"}, output: null}
       - {input: {text: "normal words only"}, output: {text: "normal words only"}}
       - {input: {text: "three a b c spaced out letters"}, output: {text: "three a b c spaced out letters"}}
       - {input: {text: "four a b c d spaced out letters"}, output: null}
+
+  # drop when there is .... in utterance as this indicates a non-standard punctuation
+  # that we don't want to learn
+  - _target_: sdp.processors.DropIfRegexMatch
+    regex_patterns:
+    - '\.\.\.\.'
+    should_run: ${subfield:${run_filtering},${data_split}}
+    test_cases:
+      - {input: {text: "Sì, mi ricordo.... Frivolo.... mondano.... vent'anni appena...."}, output: null}
+      - {input: {text: "Sì, mi ricordo... Frivolo, mondano! vent'anni appena."}, output: {text: "Sì, mi ricordo... Frivolo, mondano! vent'anni appena."}}
+
+  - _target_: sdp.processors.ASRInference
+    pretrained_model: "stt_it_quartznet15x5"
+    output_manifest_file: "${workspace_dir}/${data_split}_manifest_with_preds.json"
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  - _target_: sdp.processors.DuplicateFields
+    duplicate_fields:
+      "text": "text_no_pc"
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  - _target_: sdp.processors.SubMakeLowercase
+    text_key: "text_no_pc"
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  - _target_: sdp.processors.SubRegex
+    text_key: "text_no_pc"
+    regex_params_list:
+    - {"pattern": '[?.,]', "repl": ""}
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  - _target_: sdp.processors.DropASRError
+    consecutive_words_threshold: 5
+    text_key: "text_no_pc"
+    should_run: ${subfield:${run_filtering},${data_split}}
+
+  # ----------------------------------------------------------------------
 
   - _target_: sdp.processors.ChangeToRelativePath
     base_dir: ${workspace_dir}
